[package]
name = "r-pipe-tester"
version = "0.1.0"
authors = ["Markus Suomalainen <markus.suomalainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unix-named-pipe = "0.2.0"
interprocess = "1.1.1"
shutdown_hooks = "0.1.0"